# whypkg

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  apt-why  apt-why.bak  apt-why.bak2  apt-why.bakSLOW
src/backend/: dnf.rs  mod.rs  pacman.rs
src/commands/: browse.rs
tests/fixtures/: dnf_files.txt  dnf_meta.txt  dnf_provides.txt  dnf_requires.txt  dnf_userinstalled.txt  pacman_log.txt  pacman_qi.txt
